# dhis2-utils

./: .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  contract.yml  docs.yml  e2e.yml  pypi-publish.yml
docs/: cli-reference.md  codegen.md  decisions.md  examples.md  index.md  lessons.md  local-setup.md  manual-testing.md  mcp-reference.md  pat-helper.md  releasing.md  roadmap.md  testing.md  troubleshooting.md  walkthrough.md
docs/api/: aggregate.md  analytics-stream.md  analytics.md  apps.md  attribute-values.md  auth-schemes.md  auth.md  categories.md  category-combo-builder.md  category-combos.md  category-option-combos.md  category-options.md  client.md  customize.md  data-elements.md  data-sets.md  data-values.md  envelopes.md  errors.md  files.md  generated.md  index.md  indicators.md  json-patch.md  legend-sets.md  maintenance.md  maps.md  messaging.md  metadata-accessor.md  oas.md  option-sets.md  organisation-units.md  periods.md  profile.md  program-indicators.md  program-rules.md  retry-policy.md  routes.md  sharing.md  sql-views.md  (+8 more)
docs/architecture/: aggregate.md  analytics.md  apps-plugin.md  auth.md  browser.md  cli.md  client.md  conventions.md  customize-plugin.md  doctor-plugin.md  external-plugin.md  files-plugin.md  maintenance-plugin.md  mcp.md  messaging-plugin.md  metadata-crud.md  metadata-plugin.md  overview.md  plugins.md  profiles.md  route-plugin.md  schema-diff-v41-v42-v43.md  schema-diff-v42-v43.md  system.md  tracker.md  typed-schemas.md  user-groups-and-roles.md  user-plugin.md  versioning.md  workspace.md
docs/cli/: index.md
docs/client/: index.md
docs/decisions/: 0001-version-aware-helpers.md  0002-next-phase-codegen-determinism.md
docs/guides/: cli-tutorial.md  client-tutorial.md  connecting-to-dhis2.md  visualizations.md
docs/mcp/: index.md  tutorial.md
examples/: 01_whoami.py  02_list_data_elements.py  03_push_data_value.py  04_oidc_login.py  05_org_unit_crud.py  06_data_set_crud.py  README.md
examples/cli/: 01_whoami.sh  02_profiles.sh  03_metadata_and_system.sh  04_aggregate_data.sh  05_analytics.sh  06_tracker.sh  07_oidc_login.sh  08_routes.sh  10_dev_sample.sh  11_maintenance.sh  13_user.sh  14_user_groups_roles.sh  README.md  aggregate_data_values.sh  analytics_outlier_tracked_entities.sh  analytics_query.sh  apps.sh  attribute_values.sh  categories.sh  category_combo_build.sh  category_combos.sh  category_options.sh  customize_login.sh  data_elements.sh  data_sets.sh  dev_codegen.sh  dev_pat.sh  dev_sample.sh  doctor.sh  files.sh  indicators.sh  legend_sets.sh  maintenance.sh  map_screenshot.sh  maps.sh  messaging.sh  metadata_diff.sh  metadata_export_filter.sh  metadata_list_get.sh  metadata_patch.sh  (+24 more)
examples/client/: 01_whoami.py  02_list_data_elements.py  03_push_data_value.py  04_oidc_login.py  05_org_unit_crud.py  06_data_set_crud.py  07_analytics.py  08_geojson.py  09_bootstrap.py  10_metadata_bulk_import.py  11_profile.py  12_tracker_lifecycle.py  13_filter_order_paging.py  14_error_handling.py  15_indicator_crud.py  16_task_polling.py  17_strenums.py  18_analytics_events_enrollments.py  19_user.py  README.md  _runner.py  analytics_events_enrollments.py  analytics_outlier_tracked_entities.py  analytics_query.py  apps.py  attribute_values.py  bootstrap_zero_to_data.py  bulk_delete.py  bulk_patch_from_csv.py  bulk_save_and_dry_run.py  category_combo_build.py  category_options.py  concurrent_bulk.py  customize_login.py  dashboard_compose.py  data_elements.py  data_set_crud.py  data_sets.py  doctor.py  enum_round_trip.py  (+61 more)
examples/mcp/: 01_whoami.py  02_profiles.py  03_metadata.py  04_analytics.py  05_maintenance.py  06_aggregate.py  07_tracker.py  08_route.py  09_analytics_events_enrollments.py  10_user.py  README.md  aggregate_data_values.py  analytics_events_enrollments.py  analytics_outlier_tracked_entities.py  analytics_query.py  apps.py  categories.py  category_combos.py  category_options.py  customize_login.py  data_elements.py  data_sets.py  doctor.py  files.py  indicators.py  legend_sets.py  maintenance.py  messaging.py  metadata.py  metadata_diff.py  metadata_export_import.py  metadata_merge_bundle.py  metadata_patch.py  metadata_search.py  metadata_share.py  metadata_usage.py  organisation_units.py  profile_tools.py  program_indicators.py  route_register_and_run.py  (+10 more)
examples/plugin-external/: README.md  pyproject.toml
examples/plugin-external/src/dhis2_plugin_hello/: __init__.py  cli.py  mcp.py  service.py
examples/v41/cli/: README.md  analytics_outlier_tracked_entities.sh  apps.sh  categories.sh  category_combo_build.sh  category_combos.sh  customize_login.sh  data_elements.sh  dev_sample.sh  doctor.sh  files.sh  indicators.sh  legend_sets.sh  metadata_export_import.sh  metadata_merge_bundle.sh  metadata_share.sh  options.sh  organisation_units.sh  predictors.sh  profile_oidc_config.sh  tracker_event_program.sh  tracker_reads.sh  user_administration.sh  user_groups_and_roles.sh  validation_rules.sh
examples/v41/client/: README.md  _runner.py  aggregate_bulk_grouped.py  analytics_events_enrollments.py  analytics_outlier_tracked_entities.py  analytics_query.py  apps.py  apps_display_name.py  attribute_values.py  bootstrap_zero_to_data.py  bulk_delete.py  bulk_patch_from_csv.py  category_options.py  (+70 more)
infra/: .env.example  .gitignore  Dockerfile  Dockerfile.superset  Makefile  README.md  SUPERSET.md  compose.pgadmin.yml  compose.superset.yml  compose.yml  initdb.sh  run.sh  versions.env
infra/glowroot/: admin.json
infra/home/: dhis.conf
infra/login-customization/: README.md  preset.json
infra/pgadmin4/: pgpass  servers.json
infra/scripts/: _resolve_image_tag.sh  _seed_auth_oauth2.py  _seed_auth_variations.py  _seed_login_customization.py  build_e2e_dump.py  codegen_all_versions.sh  dhis2_run.sh  gen_mcp_reference.py  generate_login_logo.py  list_versions.py  pull_play_fixtures.py  seed_auth.py  startup.sh  verify_examples.py
infra/superset/: seed_dashboard.py  superset_config.py  views.sql
(+348 files in other folders)
