[project]
name = "dhis2-utils"
version = "0.0.0"
description = "Private DHIS2 tooling workspace (CLI, MCP, client library, browser automation)."
readme = "README.md"
requires-python = ">=3.13"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
dhis2-client = { workspace = true }
dhis2-core = { workspace = true }
dhis2-cli = { workspace = true }
dhis2-mcp = { workspace = true }
dhis2-browser = { workspace = true }
dhis2-codegen = { workspace = true }
mkdocs-claude-theme = { git = "https://github.com/mortenoh/mkdocs-claude-theme.git" }

[dependency-groups]
dev = [
  "coverage[toml]>=7.13",
  "mypy>=1.18",
  "pytest>=8.4",
  "pytest-asyncio>=1.2",
  "pytest-cov>=5.0",
  "respx>=0.22",
  "ruff>=0.14",
  "pyright>=1.1",
  "mkdocs>=1.6",
  "mkdocs-material>=9.7",
  "mkdocstrings[python]>=0.26",
  "mkdocs-claude-theme",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["D"]
"**/__init__.py" = ["D104"]
"**/src/**/*.py" = ["D102", "D105", "D107"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["examples", ".git", ".venv", "__pycache__", "site", "build", "dist"]
filterwarnings = [
  "ignore:Pydantic serializer warnings:UserWarning",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["packages"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
precision = 2
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
strict_equality = true
exclude = "^packages/[^/]+/tests/conftest\\.py$"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pyright]
include = ["packages"]
exclude = ["**/.venv", "**/site", "**/build", "**/dist"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportUnusedFunction = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownLambdaType = false
reportMissingImports = "warning"
reportMissingModuleSource = false
