[project]
name = "dhis2-utils"
version = "0.1.0"
description = "Private DHIS2 tooling workspace (CLI, MCP, client library, browser automation)."
readme = "README.md"
requires-python = ">=3.13"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
dhis2w-client = { workspace = true }
dhis2w-core = { workspace = true }
dhis2w-cli = { workspace = true }
dhis2w-mcp = { workspace = true }
dhis2w-browser = { workspace = true }
dhis2w-codegen = { workspace = true }

[dependency-groups]
dev = [
  "coverage[toml]>=7.13",
  "mypy>=1.20",
  "pytest>=9",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7",
  "respx>=0.23",
  "ruff>=0.15",
  "pyright>=1.1",
  "mkdocs>=1.6",
  "mkdocs-material>=9.7",
  "mkdocstrings[python]>=1.0",
  "pillow>=12.2.0",
  "hypothesis>=6.152.6",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I", "D", "SIM", "UP", "B"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["D"]
"**/__init__.py" = ["D104"]
"**/src/**/*.py" = ["D102", "D105", "D107"]
"infra/**/*.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["examples", ".git", ".venv", ".hypothesis", "__pycache__", "site", "build", "dist", "infra", "oas"]
filterwarnings = [
  # DHIS2 wire payloads carry plenty of fields not declared on our generated
  # models (which use `extra="allow"`). pydantic-core re-emits these as a
  # `PydanticSerializationUnexpectedValue` UserWarning during model_dump.
  # Filter expects `action:message_regex:category` — pin the message regex
  # to that specific class name so genuine `Pydantic serializer warnings:`
  # text from other sources surfaces instead of being silently swallowed.
  "ignore:.*PydanticSerializationUnexpectedValue.*:UserWarning",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "contract: live-schema contract tests against play.im.dhis2.org (network, opt-in)",
  "upstream_bug: tests paired with a BUGS.md entry — bug-still-present + workaround halves",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["packages"]
omit = [
  # v41 / v43 hand-written client + plugin trees are mechanical copies of v42
  # awaiting their own test trees. Measuring untested copies drags the total
  # below the fail-under bar without giving us signal. Re-include each tree
  # once its tests/v{N}/ folder is populated.
  "packages/dhis2w-client/src/dhis2w_client/v41/*",
  "packages/dhis2w-client/src/dhis2w_client/v43/*",
  "packages/dhis2w-core/src/dhis2w_core/v41/*",
  "packages/dhis2w-core/src/dhis2w_core/v43/*",
]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
precision = 2
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
strict_equality = true
exclude = "^packages/[^/]+/tests/conftest\\.py$"
mypy_path = ["infra/scripts", "examples/v42/client"]

# infra/scripts/* modules import each other via `sys.path.insert` — the
# `seed_auth` / `_seed_auth_oauth2` / `_seed_auth_variations` siblings
# aren't discoverable as a proper package. Silence the missing-import
# noise without turning off strict mode for the rest of the tree.
[[tool.mypy.overrides]]
module = ["seed_auth", "_seed_auth_oauth2", "_seed_auth_variations"]
ignore_missing_imports = true

[tool.pyright]
include = ["packages", "infra", "examples"]
exclude = ["**/.venv", "**/site", "**/build", "**/dist"]
# Sibling-module scripts (`examples/v{N}/client/_runner.py` shared across
# every `examples/v{N}/client/*.py`; `infra/scripts/seed_auth.py` + friends)
# aren't a proper package — every script resolves them by its own directory
# being on sys.path at runtime. Mirror that to pyright so `from _runner
# import ...` doesn't flag as missing.
extraPaths = ["examples/v41/client", "examples/v42/client", "examples/v43/client", "infra/scripts"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportUnusedFunction = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownLambdaType = false
reportMissingImports = "warning"
reportMissingModuleSource = false
reportDeprecated = "error"
